--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Supporting Files/Info.plist
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Supporting Files/Info.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NAVER_CLOUD_MAP_API_CLIENT_ID</key>
+	<string>$(NAVER_CLOUD_MAP_API_CLIENT_ID)</string>
+	<key>NAVER_CLOUD_MAP_API_CLIENT_SECRET</key>
+	<string>$(NAVER_CLOUD_MAP_API_CLIENT_SECRET)</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Pretendard-SemiBold.otf</string>
