[Fix] #1 - Change Info.plst

--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Supporting Files/Info.plist
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Supporting Files/Info.plist
@@ -6,6 +6,8 @@
 	<string>$(NAVER_CLOUD_MAP_API_CLIENT_ID)</string>
 	<key>NAVER_CLOUD_MAP_API_CLIENT_SECRET</key>
 	<string>$(NAVER_CLOUD_MAP_API_CLIENT_SECRET)</string>
+	<key>NMFNcpKeyId</key>
+	<string>$(NAVER_CLOUD_MAP_API_CLIENT_ID)</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
