[Feat] #19 Add Realtime Search
- what?
이걸... 했어야했나? 지오코딩으로 할 걸

--- a/DreamWorms-iOS/DreamWorms-iOS/Core/Supporting Files/Info.plist
+++ b/DreamWorms-iOS/DreamWorms-iOS/Core/Supporting Files/Info.plist
@@ -6,6 +6,10 @@
 	<string>$(NAVER_CLOUD_MAP_API_CLIENT_ID)</string>
 	<key>NAVER_CLOUD_MAP_API_CLIENT_SECRET</key>
 	<string>$(NAVER_CLOUD_MAP_API_CLIENT_SECRET)</string>
+	<key>NAVER_SEARCH_API_CLIENT_ID</key>
+	<string>$(NAVER_SEARCH_API_CLIENT_ID)</string>
+	<key>NAVER_SEARCH_API_CLIENT_SECRET</key>
+	<string>$(NAVER_SEARCH_API_CLIENT_SECRET)</string>
 	<key>NMFNcpKeyId</key>
 	<string>$(NAVER_CLOUD_MAP_API_CLIENT_ID)</string>
 	<key>NSAppTransportSecurity</key>
