[Feat] #30 - LocationCard 공통 컴포넌트 구현
What?
- Pretendard-SemiBold 폰트 추가
- 테스트용 Image Asset, SymbolLiterals 항목 추가
- LocationCard 구현

Why?
- 해당 LocationCard는 DashboardView와 OnePageView에서 공통으로 사용할 수 있는 화면이므로 재사용가능하도록 설정을 열어두었습니다

--- a/SUSA24-iOS/SUSA24-iOS/Resources/Supporting Files/Info.plist
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Supporting Files/Info.plist
@@ -20,6 +20,7 @@
 		<string>NotoSansKR-SemiBold.ttf</string>
 		<string>Pretendard-Medium.otf</string>
 		<string>Pretendard-Regular.otf</string>
+		<string>Pretendard-SemiBold.otf</string>
 	</array>
 </dict>
 </plist>
