--- a/SUSA24-iOS/SUSA24-iOS/Resources/Supporting Files/Info.plist
+++ b/SUSA24-iOS/SUSA24-iOS/Resources/Supporting Files/Info.plist
@@ -24,5 +24,7 @@
 		<string>Pretendard-Regular.otf</string>
 		<string>Pretendard-SemiBold.otf</string>
 	</array>
+	<key>VWORLD_CCTV_API_KEY</key>
+	<string>$(VWORLD_CCTV_API_KEY)</string>
 </dict>
 </plist>
